Fixed width overflow on subscribed topics div

--- a/src/components/Client/Client.module.css
+++ b/src/components/Client/Client.module.css
@@ -29,10 +29,27 @@
 }
 .topicsform input[type='text'] {
     width: 240px;
+    height: 40px;
+    padding: 3px;
+    font-size: 14px;
 }
 .topicsform input[type='submit'] {
     width: 240px;
+    height: 40px;
+    padding: 3px;
+    font-size: 14px;
+    font-weight: bold;
+    border: 2px solid black;
+    font-size: 16px;
+    transition: 0.3s;
+    cursor: pointer;
 }
+.topicsform input[type='submit']:hover {
+    border-color: white;
+    color: white;
+    background-color: var(--color-03);
+}
+
 .verticalseparator_flex {
     height: 100%;
     border: 0.5px solid var(--color-04);
@@ -59,6 +76,7 @@
     border-bottom: 1px solid var(--color-04);
     padding-bottom: 2px;
     gap: 3px;
+    justify-content: space-between;
 }
 .subscribed_topics > .topics > p {
     flex-basis: 100%;
@@ -68,17 +86,19 @@
     align-items: center;
 }
 .subscribed_topics > .topics > form{
-    width: 100px;
+    width: 120px;
 }
 .subscribed_topics > .topics > form  > input[type='submit'] {
+    width: 100%;
+    height: 100%;
     cursor: pointer;
     transition: 0.3s;
     font-weight: bold;
     font-size: 14px;
+    border: 2px solid white;
 }
 .subscribed_topics > .topics > form > input[type='submit']:hover {
     color: white;
-    border-color: white;
     background-color: var(--color-03);
 } 
 
